<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlAñadir"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Anadir">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/et_Nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="308dp"
        android:ems="10"
        android:hint="@string/et_precio"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etCiudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="94dp"
        android:ems="10"
        android:hint="@string/et_ciudad"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etNumDias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="236dp"
        android:ems="10"
        android:hint="@string/et_dias"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etPais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="166dp"
        android:ems="10"
        android:hint="@string/et_pais"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnAñadir2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"
        android:onClick="Enviar"
        android:text="@string/btn_añadir" />
</RelativeLayout>